--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ APP_SECRET=63e2db2f493bac31caab6e38fdcb6eee
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:''@127.0.0.1:3306/mambdd
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
