fix du bug de modif et suppression d'images en mode admin

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,7 +14,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         admin:
-            pattern: ^/admin
+            pattern: ^/admin/
             anonymous: true
 
             provider: in_database
@@ -24,7 +24,7 @@ security:
                 check_path: admin_account_login
 
             logout:
-                path: account_logout
+                path: admin_account_logout
                 target: homepage
         main:
             anonymous: true
