fin du dashboard avec DQL

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,7 +14,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         admin:
-            pattern: ^/admin/
+            pattern: ^/admin
             anonymous: true
 
             provider: in_database
